[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/sw.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 30.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 17 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 17 )

[node name="sw" type="PathFollow2D"]
z_index = 3
cubic_interp = false
loop = false
lookahead = 0.001
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Put switch on a tip of forked line.
NOTE: line must have different ids"
}
this_line_dir = 1

[node name="rot" type="Node2D" parent="."]

[node name="sensor" type="Area2D" parent="rot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rot/sensor"]
position = Vector2( 0, 10.5 )
shape = SubResource( 2 )

[node name="in" type="Area2D" parent="rot"]
collision_layer = 4294901760
collision_mask = 4294901760
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="rot/in"]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="out" type="Area2D" parent="rot"]
collision_layer = 4294901760
collision_mask = 4294901760
input_pickable = false
__meta__ = {
"_editor_description_": "Put it on a tip of split line"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="rot/out"]
position = Vector2( 2, 0 )
shape = SubResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="rot"]
modulate = Color( 0.203922, 0.101961, 0.0196078, 1 )
polygon = PoolVector2Array( -1, -20, 1, -20, 1, 27, -1, 27 )

[node name="Polygon2D2" type="Polygon2D" parent="rot"]
modulate = Color( 0.317647, 0.282353, 0.282353, 1 )
polygon = PoolVector2Array( -3, -13, 3, -13, 3, -10, -3, -10 )

[node name="Polygon2D3" type="Polygon2D" parent="rot"]
modulate = Color( 0.317647, 0.282353, 0.282353, 1 )
position = Vector2( 0, 23 )
polygon = PoolVector2Array( -3, -13, 3, -13, 3, -10, -3, -10 )

[node name="strait" type="Node2D" parent="rot"]
position = Vector2( 0, 33 )

[node name="bg2" type="Polygon2D" parent="rot/strait"]
modulate = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -9, -7, 9, -7, 9, 7, -9, 7 )

[node name="bg" type="Polygon2D" parent="rot/strait"]
modulate = Color( 0.266667, 0.47451, 0.14902, 1 )
polygon = PoolVector2Array( -8, -6, 8, -6, 8, 6, -8, 6 )

[node name="Polygon2D2" type="Polygon2D" parent="rot/strait"]
position = Vector2( 0, -31 )
polygon = PoolVector2Array( -7, 30, 1, 30, 1, 28, 7, 31, 1, 34, 1, 32, -7, 32 )

[node name="left" type="Node2D" parent="rot"]
visible = false
position = Vector2( 0, 33 )

[node name="bg2" type="Polygon2D" parent="rot/left"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -31 )
polygon = PoolVector2Array( -9, 24, 9, 24, 9, 35, 5, 38, -5, 38, -9, 35 )

[node name="bg" type="Polygon2D" parent="rot/left"]
modulate = Color( 0.43, 0.372667, 0, 1 )
position = Vector2( 0, -31 )
polygon = PoolVector2Array( -8, 25, 8, 25, 8, 35, -8, 35 )

[node name="arrow" type="Polygon2D" parent="rot/left"]
position = Vector2( -1, -29 )
polygon = PoolVector2Array( -6, 30, -6, 32, 1, 32, 4, 32, 5, 31, 5, 29, 8, 29, 4, 24, 0, 29, 3, 29, 3, 30, -2, 30 )

[node name="side" type="Polygon2D" parent="rot/left"]
modulate = Color( 0.0117647, 0.172549, 0.00784314, 1 )
position = Vector2( 0, -29 )
polygon = PoolVector2Array( -8, 33, 8, 33, 5, 36, -5, 36 )

[connection signal="area_entered" from="rot/sensor" to="." method="_on_sensor_area_entered"]
[connection signal="area_exited" from="rot/sensor" to="." method="_on_sensor_area_exited"]
[connection signal="mouse_entered" from="rot/sensor" to="." method="_on_sensor_mouse_entered"]
[connection signal="mouse_exited" from="rot/sensor" to="." method="_on_sensor_mouse_exited"]
[connection signal="body_entered" from="rot/in" to="." method="_on_in_body_entered"]
[connection signal="body_exited" from="rot/in" to="." method="_on_in_body_exited"]
[connection signal="body_entered" from="rot/out" to="." method="_on_out_body_entered"]
[connection signal="body_exited" from="rot/out" to="." method="_on_out_body_exited"]
